fix spacing (thanks bootstrap upgrade)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -219,7 +219,7 @@
 hr {
 	margin-left:0;
 	width:10%;
-	margin-top:0;
+	margin:0;
 	padding-bottom:0.5rem;
 }
 
